# py-project-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  ka  mypy.ini  pyproject.toml  pytest.ini  set_gcp.sh
.devcontainer/: devcontainer.json
.github/workflows/: makefile.yml
nb/: 01.ipynb  README.md  linked-lists.ipynb  playground.md  pyproject.toml  readme.md
py_project_template.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py  a_ds.py  linked_lists.py  nodes.py  readme.md
tests/: readme.md  test_init.py  test_linked_lists.py
