[project]
name = "py-project-template"
version = "0.3.0"
readme = "README.md"
requires-python = ">=3.12"
description = "Simple py project template"
author_email = "obar1+gh@pm.me"
dependencies = [
    "google-genai>=1.55.0",
    "ipykernel>=7.1.0",
    "pre-commit>=4.3.0",
    "pytest>=7.4.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "pre-commit>=3.7.0"
]
